Made headings click-copyable; sidebar align fix

--- a/src/components/mdx/blog/css/wrapper.module.css
+++ b/src/components/mdx/blog/css/wrapper.module.css
@@ -1,10 +1,11 @@
 /* Pads the top of the screen on scroll */
 
-.article > h2,
-.article > h3,
-.article > h4,
-.article > h5,
-.article > h6 {
+.article > a,
+.article > a > h2,
+.article > a > h3,
+.article > a > h4,
+.article > a > h5,
+.article > a > h6 {
   scroll-margin-top: 6.75rem;
 }
 
